<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="calculateBtn">Calculate BMI</string>
    <string name="titleAlert">Warning</string>
    <string name="messageAlert">Please select a gender before to calculate</string>

    <string name="textResult">Your Result</string>
    <string name="textResultCondition1">Low Weight</string>
    <string name="textResultCondition2">Normal</string>
    <string name="textResultCondition3">Overweight</string>
    <string name="textResultCondition4">Obesity</string>

    <string name="resultObservation1">Your body weight is lower than appropriate, try to be well fed and eat three meals a day.</string>
    <string name="resultObservation2">Your body weight is correct for your height, keep it up</string>
    <string name="resultObservation3">You are overweight try to go to the gym or go for a walk at least 1 hour every day</string>
    <string name="resultObservation4">You are obese, this state is very harmful to your health, try not to eat fried foods and to do exercise</string>

    <string name="reCalculateBtn">Re-Calculate</string>
</resources>